# un-orchestrator

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYRIGHT  README  README.md  README_COMPILE.md  TODO  start_UN  start_name_resolver  start_traffic  start_veth
contrib/OpenWrt/: CMakeLists.txt  Makefile
contrib/OpenWrt/json-spirit/: CMakeLists.txt  openwrt-toolchain.cmake
db_initializer/: CMakeLists.txt  README.md  db_initializer  db_initializer.cc
orchestrator/: CMakeLists.txt  README-security.md  README.md  README_COMPILE.md  README_NF-FG.md  README_OBSOLETE.md  README_OpenWRT.md  README_RESTAPI.md  README_RUN.md  README_database.md  README_orchestrator_mode.md  README_security.md  REAMDE-security.md  ivshmem-qemu-2.2.1.patch  node_orchestrator.cc
orchestrator/compute_controller/: README.md  compute_controller.cc  compute_controller.h  description.cc  description.h  nf.cc  nf.h  nf_type.h  nfs_manager.cc  nfs_manager.h  startNF_in.h  stopNF_in.h  updateNF_in.h
orchestrator/compute_controller/plugins/docker/: docker.cc  docker.h  docker_constants.h
orchestrator/compute_controller/plugins/dpdk/: dpdk.cc  dpdk.h  dpdk_constants.h  dpdk_description.cc  dpdk_description.h
orchestrator/compute_controller/plugins/kvm-libvirt/: ivshmem_cmdline_generator.cc  ivshmem_cmdline_generator.h  libvirt.cc  libvirt.h  libvirt_constants.h
orchestrator/compute_controller/plugins/native/: Capabilities.xml  Capabilities.xsd  capabilities.conf  capability.cc  capability.cpp  capability.h  native.cc  native.cc~  native.h  native.h~  native_constants.h  native_constants.h~  native_description.cc  native_description.h
orchestrator/config/: bng_nat_nffg.json  default-config.ini  default-config2.ini  dpdk1.xml  dpdk2.xml  er_nffg.json  er_nffg_scale_out_intermediate2.json  nat.dpdk1.json  nf-fg_vnft5_example.json  passthrough_with_vnf_nffg.json  pfwd_dpdk1.json  simple_passthrough_nffg.json  splitbng_nffg.json  universal-node-config.ini  universal-node-description.json  universal-node-example.xml  universal-node-schema.xsd
orchestrator/config/virtualizer/: er_nffg.xml  passthrough_with_vnf_nffg.xml  passthrough_with_vnf_nffg_and_match_and_action.xml  simple_passthrough_nffg.xml
orchestrator/monitoring_controller/: monitoring_controller.cc  monitoring_controller.h  monitoring_controller_constants.h
orchestrator/network_controller/openflow_controller/: controller.cc  controller.h
orchestrator/network_controller/switch_manager/: README.md  addEndpoint_in.h  addEndpoint_out.h  addNFports_in.h  addNFports_out.h  addVirtualLink_in.h  addVirtualLink_out.h  checkPhysicalPorts_in.h  createLSIin.h  createLSIout.h  destroyEndpoint_in.h  destroyNFports_in.h  destroyVirtualLink_in.h  switch_manager.h
orchestrator/node_resource_manager/database_manager/SQLite/: SQLiteManager.cc  SQLiteManager.h  SQLiteManager_constants.h
orchestrator/node_resource_manager/graph/: generic_action.cc  generic_action.h  match.cc  match.h  vlan_action.cc  vlan_action.h
orchestrator/node_resource_manager/graph/graph-parser/: graph_parser.cc  graph_parser.h  match_parser.cc  match_parser.h
orchestrator/node_resource_manager/graph/high_level_graph/: high_level_graph.cc  high_level_graph.h  high_level_graph_endpoint_gre.cc  high_level_graph_endpoint_gre.h  high_level_graph_endpoint_interface.cc  high_level_graph_endpoint_interface.h  high_level_graph_endpoint_interface_out.cc  high_level_graph_endpoint_interface_out.h  high_level_graph_endpoint_internal.cc  high_level_graph_endpoint_internal.h  high_level_graph_endpoint_management.cc  high_level_graph_endpoint_management.h  high_level_graph_endpoint_vlan.cc  high_level_graph_endpoint_vlan.h  high_level_graph_vnf.cc  high_level_graph_vnf.h  high_level_match.cc  high_level_match.h  high_level_output_action.cc  high_level_output_action.h  high_level_output_action_endpoint.cc  high_level_output_action_endpoint.h  high_level_output_action_endpoint_gre.cc  high_level_output_action_endpoint_gre.h  high_level_output_action_endpoint_internal.cc  high_level_output_action_endpoint_internal.h  high_level_output_action_endpoint_management.cc  high_level_output_action_endpoint_management.h  high_level_output_action_nf.cc  high_level_output_action_nf.h  high_level_output_action_port.cc  high_level_output_action_port.h  high_level_rule.cc  high_level_rule.h  nf_port_configuration.h
orchestrator/node_resource_manager/graph/low_level_graph/: graph.cc  graph.h  low_level_match.cc  low_level_match.h  output_action.cc  output_action.h  rule.cc  rule.h
orchestrator/node_resource_manager/graph_manager/: fileParser.cc  fileParser.h  graph_info.cc  graph_info.h  graph_manager.cc  graph_manager.h  graph_translator.cc  graph_translator.h  lsi.cc  lsi.h  rule_removed_info.h  switchPortsAssociation.cc  switchPortsAssociation.h  virtual_link.cc  virtual_link.h
orchestrator/node_resource_manager/pub_sub/: pub_sub.cc  pub_sub.h  pub_sub_constants.h
orchestrator/node_resource_manager/pub_sub_client_manager/: PubSubClientManager.h
orchestrator/node_resource_manager/pub_sub_manager/: PubSubManager.h
orchestrator/node_resource_manager/resource_manager/: description_parser.cc  description_parser.h  keywords.h  resource_manager.cc  resource_manager.h
orchestrator/node_resource_manager/resource_manager/domain_description/: domain_description.cc  domain_description.h  ethernet_info.cc  ethernet_info.h  interface.cc  interface.h  interface_capabilities.cc  interface_capabilities.h  interface_configuration.cc  interface_configuration.h  interface_options.cc  interface_options.h  interface_state.cc  interface_state.h  neighbor_info.cc  neighbor_info.h  network_manager.cc  network_manager.h  (+2 more)
orchestrator/node_resource_manager/rest_server/: match_parser.cc  match_parser.h  rest_server.cc  rest_server.h
orchestrator/node_resource_manager/security_manager/: security_manager.cc  security_manager.h
orchestrator/node_resource_manager/virtualizer/: actionsParser.py  constants.py  virtualizer.cc  virtualizer.h  virtualizer.py
orchestrator/utils/: constants.h  logger.c  logger.h
(+418 files in other folders)
